# crypto

./: .gitignore  Dockerfile  config.py  docker-compose.yml  main.py  pyproject.toml  requirements.txt
get_info/: api_coinmarketcap.py  api_okx.py
nginx/: Dockerfile  vbif.conf
routers/: stocks.py
services/: api_coinmarketcap.py  api_okx.py  coingecko.py  coins.py
tmpl/: coin-list.html  main.html
