[tool.poetry]
name = "crypto"
version = "0.1.0"
description = ""
authors = ["<Misha Chernov> <<tehobox@yandex.ru>>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
okx = "^2.1.1"
pytonapi = "^0.2.9"
python-okx = "^0.2.9"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
