[tool.poetry]
name = "crypto"
version = "0.1.0"
description = ""
authors = ["<Misha Chernov> <<tehobox@yandex.ru>>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
okx = "^2.1.1"
pytonapi = "^0.2.9"
python-okx = "^0.2.9"
python-dotenv = "^1.0.1"
fastapi = "^0.115.3"
uvicorn = "^0.32.0"
pydantic = "^2.9.2"
jinja2 = "^3.1.4"
sqlalchemy = "^2.0.36"
slugify = "^0.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
